<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ColorFragmenty">

    <!-- TODO: Update blank fragment layout -->

    <Button
        android:id="@+id/changeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/colorButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colorChoices" />

    <TextView
        android:id="@+id/colorPrompting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/colorPrompt"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/colorChoices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colorPrompting">

        <RadioButton
            android:id="@+id/redButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RedChoice" />

        <RadioButton
            android:id="@+id/blueButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/BlueChoice" />

        <RadioButton
            android:id="@+id/yellowButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/YellowChoice" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>